simple-container-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-container-service
  labels: 
    k8s-app : simple-container-app
spec:
  selector:
    app: simple-container-app 
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 8080
    nodePort: 31110
