simple-container-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  #Needed for AKS
  ingressClassName: nginx
  defaultBackend:
    service:
      name: simple-container-service
      port:
        number: 5000
  rules:
  - http:
      paths:
      - pathType: Prefix 
        path: /simple
        backend:
          service:
            name: simple-container-service
            port:
              number: 5000
      - pathType: Prefix
        path: /app
        backend:
          service:
            name: simple-container-service
            port:
              number: 5000
